# apps/sdkwork-terminal-pc/apis/local-runtime/openapi.yaml
@@ -148,12 +148,12 @@ paths:
       - runtimeNodeBearerAuth: []
       parameters:
       - $ref: '#/components/parameters/SessionIdQuery'
-      - name: fromCursor
+      - name: cursor
         in: query
         required: false
         schema:
           type: string
-      - name: limit
+      - name: page_size
         in: query
         required: false
         schema:
